coffee branch with slim templates, [ff]

--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -19,7 +19,7 @@ $topbar-bg: rgba(#000, 0.5);
     // position: absolute;
     z-index: -1;
     // background-position: 50% 50%;
-    background: transparent url("../img/pani-hd.jpg") no-repeat center;
+    background: transparent url("/img/pani-hd.jpg") no-repeat center;
     background-size: cover;
 }
 
@@ -27,7 +27,7 @@ $topbar-bg: rgba(#000, 0.5);
  	height: 52em;
 	// width: 100%;
 	// position: absolute;
-	background: transparent url("../img/maxresdefault.jpg") no-repeat center;
+	background: transparent url("/img/maxresdefault.jpg") no-repeat center;
   background-size: cover;
 }
 
