--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -70,3 +70,20 @@ $topbar-bg: rgba(#000, 0.5);
   margin-top: -0.5em !important;
   
 }
+
+.progress-container{
+  position: relative;
+  text-align: center;
+  width: 420px;
+  height: 420px;
+  z-index: 5;
+}
+.progress-txt{
+  position: absolute;
+  width: 420px;
+  height: 420px;
+  font-size: 80px;
+  text-align: center;
+  color: #bbb;
+  padding-top: 1.8em;
+}
