--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -68,15 +68,17 @@ $topbar-bg: rgba(#000, 0.5);
   font-size: 10em;
   text-align: center;
   margin-top: -0.5em !important;
-  
 }
 
-.progress-container{
+#progress-container{
   position: relative;
   text-align: center;
   width: 420px;
   height: 420px;
   z-index: 5;
+  margin-left: auto;
+  margin-right: auto;
+  vertical-align: middle;
 }
 .progress-txt{
   position: absolute;
